# request-limiter

./: .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  env_example  gunicorn.conf.py  init.sh  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  worker.py
api/: routers.py
api/endpoints/: webhook.py
nginx/: Dockerfile  default.conf.esh
schemas/: enums.py  requests.py  responses.py
services/: limiter.py  request_client.py
settings/: config.py
tasks/: request_tasks.py
tests/: conftest.py  test_api.py
