[tool.poetry]
name = "request-limiter"
version = "0.1.0"
description = "Simple rate limiter, cache and FastAPI based."
authors = ["verhovensky <voinywolnyprod@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.105.0"
redis = "^5.0.1"
pydantic-settings = "^2.1.0"
aiojobs = "^1.2.1"
backoff = "^2.2.1"
httpx = "^0.25.2"
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
